plugins {
	id 'org.springframework.boot' version '2.5.6'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.chatapp'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2020.0.4")
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.6'
	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
	implementation 'org.modelmapper:modelmapper-module-jsr310:1.2.2'
	implementation 'org.apache.maven.surefire:surefire-booter:3.0.0-M5'
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:2.5.6'
	implementation 'org.keycloak:keycloak-spring-boot-starter:15.0.2'

	implementation 'org.springframework.boot:spring-boot-starter-websocket:2.5.6'
	implementation 'com.google.guava:guava:31.0.1-jre'


	annotationProcessor 'org.projectlombok:lombok:1.18.22'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
	testImplementation 'org.mockito:mockito-inline:4.0.0'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'

	compileOnly 'org.projectlombok:lombok:1.18.22'
	runtimeOnly 'org.postgresql:postgresql:42.3.1'
}
dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

test {
	useJUnitPlatform()
}
